k8s/base/deployment/base-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-service
spec:
  type: NodePort
  selector:
    app: school
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
